manifests-same-namespace/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-cnn-through-egress-gateway
  namespace: aaw-fc
spec:
  hosts:
  - edition.cnn.com
  gateways:
  - mesh
  - cnn-egress-gateway-debug
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - edition.cnn.com
    route:
    - destination:
        host: cnn-egress-gateway-debug.aaw-fc.svc.cluster.local
        subset: cnn
        port:
          number: 443
  - match:
    - gateways:
      - cnn-egress-gateway-debug
      port: 443
      sniHosts:
      - edition.cnn.com
    route:
    - destination:
        host: edition.cnn.com
        port:
          number: 443
      weight: 100
