manifests-same-namespace/istio/authorizationpolicy.yaml
# Allow all for debug purposes
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: allow-all-debug
 namespace: aaw-fc
spec:
 rules:
 - {}
